Fix color of SVGs in dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ li span {
 }
 
 li img {
+  filter: invert(42%);
   width: 30px;
   height: 30px;
   margin: 10px;
